--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -6,5 +6,11 @@ server.port=8082
 #       and provide the credentials below to access it
 
 # uncomment the below lines to view sql output in console
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/critterdb
+spring.datasource.username=root
+spring.datasource.password=H3llst0orm!
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create
